added a proper config parser which will handle arrays

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ set(LLVM_LINK_COMPONENTS
   )
         
 add_clang_executable(partecl-codegen
+  src/ConfigParser.cpp
+  src/ConfigParser.h
+  src/Constants.h
   src/Main.cpp
   src/KernelGenerator.cpp
   src/KernelGenerator.h
