started implementing cpu code generation for populate_inputs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ add_clang_executable(partecl-codegen
   src/ConfigParser.cpp
   src/ConfigParser.h
   src/Constants.h
+  src/CpuCodeGenerator.cpp
+  src/CpuCodeGenerator.h
   src/Main.cpp
   src/KernelGenerator.cpp
   src/KernelGenerator.h
