extended the generation of populate_inputs to handle input arrays

--- a/test/result-compare/addarray.config
+++ b/test/result-compare/addarray.config
@@ -1,3 +1,3 @@
-input: int a 1
-input: int b 2
-result: int results[10] variable: sum
+input: int a[3] 
+input: int b 4
+result: int results[3] variable: sum
