--- a/example/linear_search/linear_search.config
+++ b/example/linear_search/linear_search.config
@@ -1,4 +1,4 @@
 input: int n 1
-stdin: int array[n]
-stdin: int number
-result: int out function: find RET
+stdin: char* array
+stdin: char* number
+result: int idx variable: idx
