Changed examples and doc to `output`

--- a/test/pointers/freq3.config
+++ b/test/pointers/freq3.config
@@ -2,4 +2,4 @@ stdin: char* stdin1
 stdin: char * stdin2
 stdin: char *stdin3
 stdin: char stdin4
-result: int occurs variable: occurs
+output: int occurs variable: occurs
